--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -178,3 +178,9 @@ v1.7 (Released 7/21/14):
     - Issue #3 (bugfix): Themes which are uploaded aren't deleted from the temporary directory
     - Issue #5 (enhancement): adminCP Unusable Without Database 
     - Issue #6 (bugfix): Mod Admin in adminCP Should Show Info
+
+v1.7-Rev1 (Released 7/21/14):
+====================
+* Issues Addressed:
+    - Issue #33 (bugfix): 1.7 Module Administration
+    - Issue #34 (bugfix): adminCP - Environment Test Always Fails
