--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -187,11 +187,10 @@ v1.7-Rev1 (Released 7/21/14):
 
 v2.0 (Released 9/28/14):
 ====================
+    - Issue #33 (bugfix): 1.7 Module Administration
+    - Issue #52 (bugfix): Guestbook: XSS
+    - Issue #63 (bugfix): adminCP: Theme Manager Won't Switch Themes
     - Issue #4 (enhancement): TheBasics Theme Should Use SimpleCSS
-    - Issue #8 & #29 (enhancement): SimpleFile Error Handling/File Validation & Integration
-    - Issue #9 (enhancement): SimpleDB Update
-    - Issue #12 & #31 (enhancement): SimpleDebug & Integratoin
+    - Issue #12 & #31 (enhancement): SimpleDebug & Integration
     - Issue #14 (enhancement): adminCP: Debug Session Toggle
     - Issue #15 (enhancement): SimpleSite Installer
-    - Issue #45 (enhancement): adminCP - DBAdmin
-    - Issue #52 (bugfix): Guestbook: XSS
