--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -194,3 +194,6 @@ v2.0 (Released 9/28/14):
     - Issue #12 & #31 (enhancement): SimpleDebug & Integration
     - Issue #14 (enhancement): adminCP: Debug Session Toggle
     - Issue #15 (enhancement): SimpleSite Installer
+
+v1.0.0 (Released ??/??/??):
+====================
