--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -198,3 +198,4 @@ v2.0 (Released 9/28/14):
 v1.0.0 (Released ??/??/??):
 ====================
     - Issue #118 (bugfix): Module editArray Not Being Used
+    - Issue #49 (enhancement): SimpleUser
