--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -200,3 +200,4 @@ v1.0.0 (Released ??/??/??):
     - Issue #118 (bugfix): Module editArray Not Being Used
     - Issue #50 (enhancement): SimpleRole
     - Issue #145: Creational Pattern Wrapper Classes (Breakout of #41)
+    - Issue #130: Autoload Components
