--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -199,3 +199,4 @@ v1.0.0 (Released ??/??/??):
 ====================
     - Issue #118 (bugfix): Module editArray Not Being Used
     - Issue #50 (enhancement): SimpleRole
+    - Issue #45: adminCP: DBAdmin Returns Blank Page Loading information_schema
