--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -198,8 +198,17 @@ v2.0 (Released 9/28/14):
 v0.3.0 (Released 9/25/16):
 ====================
     - Issue #118 (bugfix): Module editArray Not Being Used
-    - Issue #49 (enhancement): SimpleUser
     - Issue #50 (enhancement): SimpleRole
+    - Issue #145 (feature): Creational Pattern Wrapper Classes (Breakout of #41)
+    - Issue #130 (enhancement): Autoload Components
+    - Issue #156 (enhancement): Helper Class: SimpleConfigurations
+    - Issue #152 (bugfix): SimpleDB Connection Issues
+    - Issue #150 (bugfix): Ensure All References to includes Directory Are Replaced by Config
+    - Issue #153 (bugfix): adminCP: Modules Are Listed as Both Enabled and Disabled
+
+v1.0.0 (Released ??/??/??):
+====================
+    - Issue #49 (enhancement): SimpleUser
     - Issue #45: adminCP: DBAdmin Returns Blank Page Loading information_schema
     - Issue #124 (enhancement): 
     - Issue #42 (enhancement):
@@ -207,9 +216,3 @@ v0.3.0 (Released 9/25/16):
     - Issue #112 (enhancement):
     - Issue #99 (enhancement):
     - Issue #155: Make Bootstrapper File
-    - Issue #145 (feature): Creational Pattern Wrapper Classes (Breakout of #41)
-    - Issue #130 (enhancement): Autoload Components
-    - Issue #156 (enhancement): Helper Class: SimpleConfigurations
-    - Issue #152 (bugfix): SimpleDB Connection Issues
-    - Issue #150 (bugfix): Ensure All References to includes Directory Are Replaced by Config
-    - Issue #153 (bugfix): adminCP: Modules Are Listed as Both Enabled and Disabled
